// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Calendar should support locale 1`] = `
<div
  class="ant-picker-calendar ant-picker-calendar-full"
>
  <div
    class="ant-picker-calendar-header"
  >
    <div
      class="ant-select ant-picker-calendar-year-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          2018年
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-select ant-picker-calendar-month-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          10月
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-radio-group ant-radio-group-outline ant-radio-group-default ant-picker-calendar-mode-switch"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="month"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          月
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="year"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          年
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-picker-panel"
    tabindex="0"
  >
    <div
      class="ant-picker-date-panel"
    >
      <div
        class="ant-picker-body"
      >
        <table
          class="ant-picker-content"
        >
          <thead>
            <tr>
              <th>
                一
              </th>
              <th>
                二
              </th>
              <th>
                三
              </th>
              <th>
                四
              </th>
              <th>
                五
              </th>
              <th>
                六
              </th>
              <th>
                日
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-01"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    01
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-02"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    02
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-03"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    03
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-04"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    04
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-05"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    05
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-06"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    06
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-07"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    07
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-08"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    08
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-09"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    09
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-10"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    10
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-11"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    11
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-12"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    12
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-13"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    13
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-14"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    14
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-15"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    15
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-16"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    16
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-17"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    17
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-18"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    18
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-today ant-picker-cell-selected"
                title="2018-10-19"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date ant-picker-calendar-date-today"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    19
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-20"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    20
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-21"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    21
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-22"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    22
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-23"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    23
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-24"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    24
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-25"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    25
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-26"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    26
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-27"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    27
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-28"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    28
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-29"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    29
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-30"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    30
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-31"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    31
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-01"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    01
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-02"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    02
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-03"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    03
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-04"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    04
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="ant-picker-cell"
                title="2018-11-05"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    05
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-06"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    06
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-07"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    07
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-08"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    08
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-09"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    09
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-10"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    10
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-11"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    11
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-fullcalendar-fullscreen ant-fullcalendar-rtl"
>
  <div
    class="ant-fullcalendar-header"
  >
    <div
      class="ant-select ant-fullcalendar-year-select ant-select-rtl ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            role="combobox"
            style="opacity:0"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          2019
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-select ant-fullcalendar-month-select ant-select-rtl ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            role="combobox"
            style="opacity:0"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          Dec
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-radio-group ant-radio-group-outline ant-radio-group-default ant-radio-group-rtl"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-rtl"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="month"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Month
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-rtl"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="year"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Year
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-fullcalendar ant-fullcalendar-full ant-fullcalendar-fullscreen"
    tabindex="0"
  >
    <div
      class="ant-fullcalendar-calendar-body"
    >
      <table
        cellspacing="0"
        class="ant-fullcalendar-table"
        role="grid"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="ant-fullcalendar-column-header"
              role="columnheader"
              title="Sun"
            >
              <span
                class="ant-fullcalendar-column-header-inner"
              >
                Su
              </span>
            </th>
            <th
              class="ant-fullcalendar-column-header"
              role="columnheader"
              title="Mon"
            >
              <span
                class="ant-fullcalendar-column-header-inner"
              >
                Mo
              </span>
            </th>
            <th
              class="ant-fullcalendar-column-header"
              role="columnheader"
              title="Tue"
            >
              <span
                class="ant-fullcalendar-column-header-inner"
              >
                Tu
              </span>
            </th>
            <th
              class="ant-fullcalendar-column-header"
              role="columnheader"
              title="Wed"
            >
              <span
                class="ant-fullcalendar-column-header-inner"
              >
                We
              </span>
            </th>
            <th
              class="ant-fullcalendar-column-header"
              role="columnheader"
              title="Thu"
            >
              <span
                class="ant-fullcalendar-column-header-inner"
              >
                Th
              </span>
            </th>
            <th
              class="ant-fullcalendar-column-header"
              role="columnheader"
              title="Fri"
            >
              <span
                class="ant-fullcalendar-column-header-inner"
              >
                Fr
              </span>
            </th>
            <th
              class="ant-fullcalendar-column-header"
              role="columnheader"
              title="Sat"
            >
              <span
                class="ant-fullcalendar-column-header-inner"
              >
                Sa
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-fullcalendar-tbody"
        >
          <tr
            class="ant-fullcalendar-current-week ant-fullcalendar-active-week"
            role="row"
          >
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 1, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  01
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-today ant-fullcalendar-selected-day"
              role="gridcell"
              title="December 2, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  02
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 3, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  03
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 4, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  04
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 5, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  05
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 6, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  06
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 7, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  07
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 8, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  08
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 9, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  09
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 10, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  10
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 11, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  11
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 12, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  12
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 13, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  13
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 14, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  14
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 15, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  15
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 16, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  16
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 17, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  17
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 18, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  18
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 19, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  19
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 20, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  20
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 21, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  21
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 22, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  22
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 23, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  23
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 24, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  24
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 25, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  25
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 26, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  26
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 27, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  27
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 28, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  28
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 29, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  29
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell"
              role="gridcell"
              title="December 30, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  30
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-last-day-of-month"
              role="gridcell"
              title="December 31, 2019"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  31
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 1, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  01
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 2, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  02
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 3, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  03
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 4, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  04
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 5, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  05
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 6, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  06
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 7, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  07
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 8, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  08
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 9, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  09
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 10, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  10
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
            <td
              class="ant-fullcalendar-cell ant-fullcalendar-next-month-btn-day"
              role="gridcell"
              title="January 11, 2020"
            >
              <div
                class="ant-fullcalendar-date"
              >
                <div
                  class="ant-fullcalendar-value"
                >
                  11
                </div>
                <div
                  class="ant-fullcalendar-content"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="undefined-header"
>
  <div
    class="ant-select ant-fullcalendar-year-select ant-select-sm ant-select-rtl ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          role="combobox"
          style="opacity:0"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-item"
      >
        2019
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-radio-group ant-radio-group-outline ant-radio-group-small ant-radio-group-rtl"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-rtl"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="month"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-rtl"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="year"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
    </label>
  </div>
</div>
`;
